--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <title>Guess the Word</title>
+    <link href="http://fonts.cdnfonts.com/css/sphere-fez" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
